# calendrier

./: .gitignore  Procfile  README.md  app.json  package.json
.github/workflows/: ios-build-check.yml  ios-create-cert.yml  ios-register-bundleid.yml  testflight.yml
backend/: Cargo.toml  seed_events.json
backend/src/: astro.rs  astronomy.rs  backup.rs  f1.rs  handlers.rs  holidays.rs  main.rs  seed.rs  settings.rs  state.rs  tides.rs  tmdb.rs  weather.rs
backend/src/entities/: event.rs  mod.rs  setting.rs
backend/src/migration/: m20240101_000001_create_event_table.rs  m20260722_000001_create_setting_table.rs  m20260722_000002_add_recurrence.rs  mod.rs
frontend/: index.html  package.json  tsconfig.tsbuildinfo
frontend/public/: manifest.webmanifest
frontend/src/: App.tsx  api.ts  dates.ts  notifications.ts  speech.ts  storage.ts  styles.css  types.ts  weather.ts
frontend/src/components/: CalendarGrid.tsx  DayAgenda.tsx  EventModal.tsx  SearchModal.tsx  TideSpotsModal.tsx
ios/: README.md
ios/Calendrier/: API.swift  APIClient.swift  AgendaView.swift  CalendarViewModel.swift  Calendrier.entitlements  CalendrierApp.swift  ColorHex.swift  ContentView.swift  DeviceBackup.swift  EventEditorView.swift  Models.swift  MonthView.swift  NotificationBridge.swift  Notifications.swift  RootView.swift  SearchView.swift  SettingsView.swift  Speech.swift  SplashView.swift  Store.swift  Utils.swift  WebView.swift
ios/Calendrier.xcodeproj/: project.pbxproj
ios/Calendrier/Views/: DayAgendaView.swift  (+3 more)
ios/CalendrierWidget/: CalendrierWidget.swift  CalendrierWidgets.swift
(+3 files in other folders)
