[package]
name = "calendrier-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
flate2 = "1"
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"
log = "0.4"
